--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "sanitize.css": "^13.0.0",
+    "styled-component": "^2.8.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
